welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:3: error: value <== is not a member of Int
	if(90<== nombre1 <==100 && 190<==nombre2<==200)
             ^nearHundred:3: error: type mismatch;
 found   : Unit
 required: Boolean
	if(90<== nombre1 <==100 && 190<==nombre2<==200)
        ^