welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = 
{
	if(90<== nombre1 <==100 && 190<==nombre2<==200)
	{
		return true
	}
}
